Fix #3511 Add hyperlinks to EntryPreviewWidget notes field
This change adds support for hyperlinks in the notes field of the EntryPreviewWidget. This is done by enabling the `openExternalLinks` property of `QLabel`, and modifying the value of the content of this field so that links are wrapped
with `<a>` tags.

Links are assumed to use the format: `protocol://path`, since assumptions cannot/shoudn't be made about the specific format of a link. The text of the label uses the modified notes value.

--- a/src/gui/EntryPreviewWidget.ui
+++ b/src/gui/EntryPreviewWidget.ui
@@ -463,7 +463,7 @@
                  <string>Notes</string>
                 </property>
                 <property name="alignment">
-                 <set>Qt::AlignTop|Qt::AlignRight</set>
+                 <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
                 </property>
                </widget>
               </item>
@@ -502,11 +502,20 @@
                   <property name="text">
                    <string notr="true">notes</string>
                   </property>
+                  <property name="textFormat">
+                   <enum>Qt::RichText</enum>
+                  </property>
                   <property name="alignment">
                    <set>Qt::AlignTop</set>
                   </property>
                   <property name="wordWrap">
                    <bool>true</bool>
+                  </property>
+                  <property name="openExternalLinks">
+                   <bool>true</bool>
+                  </property>
+                  <property name="textInteractionFlags">
+                   <set>Qt::NoTextInteraction</set>
                   </property>
                  </widget>
                 </item>
@@ -828,7 +837,7 @@
           <layout class="QVBoxLayout" name="verticalLayout_8">
            <item>
             <widget class="QWidget" name="groupGeneralWidget" native="true">
-             <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0">
+             <layout class="QGridLayout" name="gridLayout_2" columnstretch="0,0,0,0">
               <property name="leftMargin">
                <number>0</number>
               </property>
@@ -971,7 +980,7 @@
                  <string>Notes</string>
                 </property>
                 <property name="alignment">
-                 <set>Qt::AlignTop|Qt::AlignRight</set>
+                 <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
                 </property>
                </widget>
               </item>
